--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,5 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-lib\screens\home_page
+lib/screens/home_page
+lib/data/youtube_home_data.dart
